# cpp_programming

./: .gitignore
chrono/stopwatch/: main.cpp
cmake_demo/install_demo/foo/: foo.cpp
curve/: CMakeLists.txt  Makefile  format.sh
curve/core/: CMakeLists.txt  basic_types.h  bezier_curve.cc  bezier_curve.h  utils.h
curve/jupyter/: bezier_curve.ipynb  start.sh
curve/jupyter/cpp/: CMakeLists.txt  curve_py.cc
database/mysql/use_mysql/: CMakeLists.txt  CMakeSettings.json  readme.md
database/mysql/use_mysql/mysql_accessor/: CMakeLists.txt  mysql_accessor.cpp  mysql_accessor.h
database/mysql/use_mysql/mysql_xDevApi/: CMakeLists.txt
demos/cmake_demos/cmake_flags/: CMakeLists.txt
demos/cmake_demos/cmake_install_rpath/: CMakeLists.txt
demos/cmake_demos/cmake_install_rpath/lib/: CMakeLists.txt
demos/cmake_demos/cmake_install_rpath/src/: CMakeLists.txt
demos/cmake_demos/cmake_variable/: CMakeLists.txt
demos/cmake_demos/install_demo/: CMakeLists.txt
demos/cmake_demos/rpath_origin/: CMakeLists.txt
demos/google_benchmark_demo/: CMakeLists.txt
demos/google_benchmark_demo/demo/: CMakeLists.txt  demo.cc
demos/log_demo/log/: logger.cpp
demos/make_demo/src/: foo.h
demos/make_demos/call_cmd/: Makefile
demos/make_demos/check_dir/: Makefile
demos/make_demos/check_env/: Makefile
demos/make_demos/make_condition/: Makefile
demos/make_demos/make_foo/: .gitignore
demos/make_demos/make_prepare/: Makefile
demos/protobuf_demos/: CMakeLists.txt
demos/protobuf_demos/demos/: CMakeLists.txt
demos/protobuf_demos/demos/greet/proto/: CMakeLists.txt  greet.proto
demos/protobuf_demos/demos/movie/proto/: CMakeLists.txt  movie.proto
geodetic/: main.cpp
learn_grpc/: readme.md
learn_grpc/hello_world/: CMakelists.txt  readme.md  server.config
learn_grpc/hello_world/config/: client.config  server.config
learn_grpc/hello_world/src/: CMakelists.txt
learn_grpc/hello_world/src/client/: CMakeLists.txt  chat_client.cpp  chat_client.h  client.cpp  client.h  goodbye_client.cpp  goodbye_client.h  hello_client.cpp  main.cpp
learn_grpc/hello_world/src/client/async/: CMakeLists.txt  abstract_async_client.cpp  abstract_async_client.h  async_chat_client.cpp  async_chat_client.h  async_goodbye_client.cpp  async_goodbye_client.h  async_hello_client.cpp  async_hello_client.h  client_event_opt.h  client_proactor.cpp  client_proactor.h
learn_grpc/hello_world/src/client/config/: CMakeLists.txt  client_config.cpp  client_config.h
learn_grpc/hello_world/src/client/sync/: CMakeLists.txt  chat_client.cpp  chat_client.h  goodbye_client.cpp  hello_client.cpp
learn_grpc/hello_world/src/lib/config/: CMakeLists.txt  abstract_config.cpp  abstract_config.h  config.cpp  config.h
learn_grpc/hello_world/src/lib/grpc/: CMakeLists.txt  CMakelists.txt  grpc.cmake
learn_grpc/hello_world/src/lib/grpc/proto/: CMakeLists.txt  goodbye.proto
learn_grpc/hello_world/src/lib/grpc/protos/: chat.proto  hello.proto
learn_grpc/hello_world/src/lib/grpc/service/: CMakeLists.txt  goodbye_service.cpp  hello_service.cpp
learn_grpc/hello_world/src/lib/utils/: CMakeLists.txt  semaphore.h  utils.cpp  utils.h
learn_grpc/hello_world/src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
learn_grpc/hello_world/src/server/async/: CMakeLists.txt  async_server.cpp  async_server.h  server_proactor.cpp  server_proactor.h
learn_grpc/hello_world/src/server/async/event_handler/: chat_event_handler.h  goodbye_event_handler.h  hello_event_handler.h  server_event_opt.h
learn_grpc/hello_world/src/server/config/: CMakeLists.txt  server_config.cpp  server_config.h
learn_grpc/hello_world/src/server/sync/: CMakeLists.txt  sync_server.cpp  sync_server.h
learn_grpc/hello_world/src/server/sync/chat_service/: CMakeLists.txt
learn_grpc/hello_world/src/server/sync/goodbye_service/: CMakeLists.txt  goodbye_service.cpp
learn_grpc/hello_world/src/server/sync/hello_service/: CMakeLists.txt
learn_grpc/hello_world/test/: CMakeLists.txt  CMakelists.txt
learn_grpc/helloworld/: CMakeLists.txt  readme.md
linux_programming/epoll/epoll_closed_fd/: main.cpp
log_demo/: CMakeLists.txt  main.cpp
log_demo/log/: CMakeLists.txt  logger.h
make_demo/src/: Makefile  bar.cpp  bar.h  foo.cpp
mock_malloc/: .gitignore  Makefile  run.sh
mock_malloc/lib/: Makefile  my_malloc.c
mock_malloc/src/: Makefile  main.cpp
multithreading/std_thread/pass_arguments_to_thread/: main.cpp
random/random_number_generator/: main.cpp
shared_library/: CMakeLists.txt
shared_library/call_func/: CMakeLists.txt  Readme.md  common.h  main.cpp
shared_library/call_func/lib/: CMakeLists.txt  foo.cpp
shared_library/static_init/: CMakeLists.txt  Readme.md  main.cpp
shared_library/static_init/lib/: CMakeLists.txt  foo.cpp
simple_http/: .gitignore  makefile
simple_http/config/src/: config.cpp
simple_http/http_server/: makefile
simple_http/http_server/include/: http_request.h
simple_http/http_server/src/: http_request.cpp
simple_http/server/: main.cpp  makefile
simple_http/server/include/: common_types.h  config.h  (+5 more)
simple_http/tcp_server/: main.cpp  makefile
simple_http/test/: makefile
smart_pointer/my_shared_ptr/: main.cpp  makefile  my_shared_ptr.h
smart_pointer/shared_ptr/: main.cpp
socket/: readme.md
socket/tcp/: main.cpp  makefile  readme.md
stream_based_io/sstream/: main.cpp
string/double_to_string/: main.cpp
string/getline/: main.cpp
syntax/functional/: main.cpp
syntax/lambda/: main.cpp
syntax/operator_new/: main.cpp
syntax/std_forward/: main.cpp
syntax/value_categories/: main.cpp
template/conditional/: main.cpp
template/detect_member/: main.cpp
template/detect_member_2/: main.cpp
template/detect_member_3/: main.cpp
template/detect_member_4/: main.cpp
template/enable_if/: main.cpp
template/is_shared_ptr/: main.cpp  makefile
template/is_shared_ptr_2/: main.cpp
template/reflection/: main.cpp
thread/semaphore/: main.cpp  makefile
thread/use_condition_variable/: main.cpp
thread/use_mutex/: main.cpp
trick/vptr/: main.cpp
win32_programming/use_iocp/: use_iocp.sln
(+107 files in other folders)
